Response processing fixes

--- a/.editorconfig
+++ b/.editorconfig
@@ -23,7 +23,7 @@ resharper_blank_lines_around_single_line_type = 0
 resharper_braces_for_for = not_required
 resharper_braces_for_ifelse = not_required
 resharper_braces_for_using = required_for_multiline
-resharper_braces_for_while = required
+resharper_braces_for_while = not_required
 resharper_braces_redundant = false
 resharper_csharp_blank_lines_around_field = 0
 resharper_csharp_blank_lines_around_invocable = 0
