--- a/ExampleClient/ExampleClient.csproj
+++ b/ExampleClient/ExampleClient.csproj
@@ -12,6 +12,9 @@
         <PackageLicenseUrl>https://raw.githubusercontent.com/zabszk/DnsClient/master/LICENSE</PackageLicenseUrl>
         <PackageProjectUrl>https://github.com/zabszk/DnsClient</PackageProjectUrl>
         <RepositoryUrl>https://github.com/zabszk/DnsClient</RepositoryUrl>
+        <Version>1.0.1</Version>
+        <AssemblyVersion>1.0.1</AssemblyVersion>
+        <FileVersion>1.0.1</FileVersion>
     </PropertyGroup>
 
     <ItemGroup>
