--- a/DnsClient/DnsClient.csproj
+++ b/DnsClient/DnsClient.csproj
@@ -10,8 +10,6 @@
     <PackageTags>dns;dns-client</PackageTags>
     <PackageVersion>1.0.1</PackageVersion>
     <Version>1.0.1</Version>
-    
-    <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>10</LangVersion>
     <Nullable>enable</Nullable>
     <Authors>Łukasz Jurczyk</Authors>
@@ -27,6 +25,7 @@
     <AssemblyVersion>1.0.1</AssemblyVersion>
     <FileVersion>1.0.1</FileVersion>
     <NeutralLanguage>en</NeutralLanguage>
+    <TargetFrameworks>net6.0;net7.0;netstandard2.1</TargetFrameworks>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
